--- a/_data/information.yml
+++ b/_data/information.yml
@@ -1,4 +1,5 @@
 ---
+name: "International College of St. Ignatius de Loyola"
 phone: "+6382-291-1541"
 email: admin@icsi.com.ph
 address_1: Corner IWHA-Espino Subdivision
